Deployment from Statiq

--- a/beacons/monitoring.html
+++ b/beacons/monitoring.html
@@ -361,6 +361,9 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
@@ -369,10 +372,10 @@
                                     <p>Beacon monitoring is quite a bit different than ranging.  Monitoring does not provide distance and has many limitations, but it works in the background.  Monitoring uses beacon regions much like ranging, however, the region is all that is returned in the delegate to protect user privacy
 Monitoring is limited to a maximum of 20 regions on iOS.  On Android &amp; UWP, there currently isn't a limit HOWEVER the BLE scans do emit quite a number of scan packets.  If you have too many, your scan will slow down your app quite a bit.</p>
 <div class="tab-wrap">
-<input type="radio" id="dcd09cf85b1041aa865c05aa36807cec-2b5ff4088b674a2c96cca4df73722607" name="dcd09cf85b1041aa865c05aa36807cec" class="tab" checked=""><label for="dcd09cf85b1041aa865c05aa36807cec-2b5ff4088b674a2c96cca4df73722607">General</label>
-<input type="radio" id="dcd09cf85b1041aa865c05aa36807cec-c35fb451e7bf4a8ab50d7fa0c8b5ffef" name="dcd09cf85b1041aa865c05aa36807cec" class="tab"><label for="dcd09cf85b1041aa865c05aa36807cec-c35fb451e7bf4a8ab50d7fa0c8b5ffef">Startup</label>
-<input type="radio" id="dcd09cf85b1041aa865c05aa36807cec-8e2ac13570294a8a9a8cf413d3c0242b" name="dcd09cf85b1041aa865c05aa36807cec" class="tab"><label for="dcd09cf85b1041aa865c05aa36807cec-8e2ac13570294a8a9a8cf413d3c0242b">Android</label>
-<input type="radio" id="dcd09cf85b1041aa865c05aa36807cec-4ea160b5bbdf4cf4b93fd9742085f796" name="dcd09cf85b1041aa865c05aa36807cec" class="tab"><label for="dcd09cf85b1041aa865c05aa36807cec-4ea160b5bbdf4cf4b93fd9742085f796">iOS</label>
+<input type="radio" id="2156cc448f85496b8f8d9b408f2fa317-25690e0d4c844829aaec6270090d6eef" name="2156cc448f85496b8f8d9b408f2fa317" class="tab" checked=""><label for="2156cc448f85496b8f8d9b408f2fa317-25690e0d4c844829aaec6270090d6eef">General</label>
+<input type="radio" id="2156cc448f85496b8f8d9b408f2fa317-c8a865bc3cb9402fba19cd760d3815fc" name="2156cc448f85496b8f8d9b408f2fa317" class="tab"><label for="2156cc448f85496b8f8d9b408f2fa317-c8a865bc3cb9402fba19cd760d3815fc">Startup</label>
+<input type="radio" id="2156cc448f85496b8f8d9b408f2fa317-c4f9170a0f524cf49fd30fa736cb17d5" name="2156cc448f85496b8f8d9b408f2fa317" class="tab"><label for="2156cc448f85496b8f8d9b408f2fa317-c4f9170a0f524cf49fd30fa736cb17d5">Android</label>
+<input type="radio" id="2156cc448f85496b8f8d9b408f2fa317-8b6fde9cbe6446e0bcb5eb238cefe8fb" name="2156cc448f85496b8f8d9b408f2fa317" class="tab"><label for="2156cc448f85496b8f8d9b408f2fa317-8b6fde9cbe6446e0bcb5eb238cefe8fb">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
