--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -361,6 +361,9 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
@@ -368,11 +371,11 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="4f459fff98ce4aeda4d7e74f0443880e-39072c24b59c47cda216cdd54d9ad5a2" name="4f459fff98ce4aeda4d7e74f0443880e" class="tab" checked=""><label for="4f459fff98ce4aeda4d7e74f0443880e-39072c24b59c47cda216cdd54d9ad5a2">General</label>
-<input type="radio" id="4f459fff98ce4aeda4d7e74f0443880e-09c5a64a7f544167badcba43a98a5abf" name="4f459fff98ce4aeda4d7e74f0443880e" class="tab"><label for="4f459fff98ce4aeda4d7e74f0443880e-09c5a64a7f544167badcba43a98a5abf">Startup</label>
-<input type="radio" id="4f459fff98ce4aeda4d7e74f0443880e-1481678c41c3413c93854cbc19c3af9f" name="4f459fff98ce4aeda4d7e74f0443880e" class="tab"><label for="4f459fff98ce4aeda4d7e74f0443880e-1481678c41c3413c93854cbc19c3af9f">Android</label>
-<input type="radio" id="4f459fff98ce4aeda4d7e74f0443880e-b1ebdbaeaf204c4ba4f88b68822128b4" name="4f459fff98ce4aeda4d7e74f0443880e" class="tab"><label for="4f459fff98ce4aeda4d7e74f0443880e-b1ebdbaeaf204c4ba4f88b68822128b4">iOS</label>
-<input type="radio" id="4f459fff98ce4aeda4d7e74f0443880e-3ca46b50fd574899ae8a0efedac2972b" name="4f459fff98ce4aeda4d7e74f0443880e" class="tab"><label for="4f459fff98ce4aeda4d7e74f0443880e-3ca46b50fd574899ae8a0efedac2972b">Windows</label>
+<input type="radio" id="e39d994e78194cbc835f391aa31b88fa-a71f36d08c47452996032addac7d749f" name="e39d994e78194cbc835f391aa31b88fa" class="tab" checked=""><label for="e39d994e78194cbc835f391aa31b88fa-a71f36d08c47452996032addac7d749f">General</label>
+<input type="radio" id="e39d994e78194cbc835f391aa31b88fa-d40926c015864a029319d12131c4a3fe" name="e39d994e78194cbc835f391aa31b88fa" class="tab"><label for="e39d994e78194cbc835f391aa31b88fa-d40926c015864a029319d12131c4a3fe">Startup</label>
+<input type="radio" id="e39d994e78194cbc835f391aa31b88fa-752da17c21a249c2858f081bccd5d9ed" name="e39d994e78194cbc835f391aa31b88fa" class="tab"><label for="e39d994e78194cbc835f391aa31b88fa-752da17c21a249c2858f081bccd5d9ed">Android</label>
+<input type="radio" id="e39d994e78194cbc835f391aa31b88fa-7d1a0d750a4b40f1826b6d7c4a3829b3" name="e39d994e78194cbc835f391aa31b88fa" class="tab"><label for="e39d994e78194cbc835f391aa31b88fa-7d1a0d750a4b40f1826b6d7c4a3829b3">iOS</label>
+<input type="radio" id="e39d994e78194cbc835f391aa31b88fa-0297994002374722a39d9ddecef6d85e" name="e39d994e78194cbc835f391aa31b88fa" class="tab"><label for="e39d994e78194cbc835f391aa31b88fa-0297994002374722a39d9ddecef6d85e">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
