--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -363,16 +363,19 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="6d5395ba725440f48d28a2cfb26fcba4-374603f9f9a64a4a84aa56f8e4e3c9b1" name="6d5395ba725440f48d28a2cfb26fcba4" class="tab" checked><label for="6d5395ba725440f48d28a2cfb26fcba4-374603f9f9a64a4a84aa56f8e4e3c9b1" >General</label>
-<input type="radio" id="6d5395ba725440f48d28a2cfb26fcba4-5676af46668c4ecb9e9f2a442b2ef840" name="6d5395ba725440f48d28a2cfb26fcba4" class="tab" ><label for="6d5395ba725440f48d28a2cfb26fcba4-5676af46668c4ecb9e9f2a442b2ef840" >Startup</label>
-<input type="radio" id="6d5395ba725440f48d28a2cfb26fcba4-f5187d3d202440f3a907db9041c6ee88" name="6d5395ba725440f48d28a2cfb26fcba4" class="tab" ><label for="6d5395ba725440f48d28a2cfb26fcba4-f5187d3d202440f3a907db9041c6ee88" >Android</label>
-<input type="radio" id="6d5395ba725440f48d28a2cfb26fcba4-691b6dcca6b54ddc894877fd741b1496" name="6d5395ba725440f48d28a2cfb26fcba4" class="tab" ><label for="6d5395ba725440f48d28a2cfb26fcba4-691b6dcca6b54ddc894877fd741b1496" >iOS</label>
+<input type="radio" id="067939c6f6bf438caca2b46f6f1e2836-027bf5242cff49b0b09a0bf2f081da25" name="067939c6f6bf438caca2b46f6f1e2836" class="tab" checked><label for="067939c6f6bf438caca2b46f6f1e2836-027bf5242cff49b0b09a0bf2f081da25" >General</label>
+<input type="radio" id="067939c6f6bf438caca2b46f6f1e2836-c4dd310be719445d8fe24006f494d2b7" name="067939c6f6bf438caca2b46f6f1e2836" class="tab" ><label for="067939c6f6bf438caca2b46f6f1e2836-c4dd310be719445d8fe24006f494d2b7" >Startup</label>
+<input type="radio" id="067939c6f6bf438caca2b46f6f1e2836-017fc084e45f4697a8fef094c91c0cd0" name="067939c6f6bf438caca2b46f6f1e2836" class="tab" ><label for="067939c6f6bf438caca2b46f6f1e2836-017fc084e45f4697a8fef094c91c0cd0" >Android</label>
+<input type="radio" id="067939c6f6bf438caca2b46f6f1e2836-65883acb39ef4a45a4dd578ec5a6fabf" name="067939c6f6bf438caca2b46f6f1e2836" class="tab" ><label for="067939c6f6bf438caca2b46f6f1e2836-65883acb39ef4a45a4dd578ec5a6fabf" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
