--- a/framework/gettingstarted.html
+++ b/framework/gettingstarted.html
@@ -363,17 +363,20 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="dd2784f9b1c5410eb78e7328de555626-310cb2e63e154021a6a6555c8578d33a" name="dd2784f9b1c5410eb78e7328de555626" class="tab" checked><label for="dd2784f9b1c5410eb78e7328de555626-310cb2e63e154021a6a6555c8578d33a" >General</label>
-<input type="radio" id="dd2784f9b1c5410eb78e7328de555626-fe6f6ca91f4446eab6055d29ce61aa8d" name="dd2784f9b1c5410eb78e7328de555626" class="tab" ><label for="dd2784f9b1c5410eb78e7328de555626-fe6f6ca91f4446eab6055d29ce61aa8d" >Startup</label>
-<input type="radio" id="dd2784f9b1c5410eb78e7328de555626-7625d09f372f490082b0fd69fb1ec1cf" name="dd2784f9b1c5410eb78e7328de555626" class="tab" ><label for="dd2784f9b1c5410eb78e7328de555626-7625d09f372f490082b0fd69fb1ec1cf" >Android</label>
-<input type="radio" id="dd2784f9b1c5410eb78e7328de555626-6e98e6baafd54155bdc6c84c2a437325" name="dd2784f9b1c5410eb78e7328de555626" class="tab" ><label for="dd2784f9b1c5410eb78e7328de555626-6e98e6baafd54155bdc6c84c2a437325" >iOS</label>
-<input type="radio" id="dd2784f9b1c5410eb78e7328de555626-b7947ac5f5e940f7888b572327857ceb" name="dd2784f9b1c5410eb78e7328de555626" class="tab" ><label for="dd2784f9b1c5410eb78e7328de555626-b7947ac5f5e940f7888b572327857ceb" >Windows</label>
+<input type="radio" id="c77bfb86f8674886b16914ad54cb07f3-0fc542e5ef564d73a730a1464f98cef0" name="c77bfb86f8674886b16914ad54cb07f3" class="tab" checked><label for="c77bfb86f8674886b16914ad54cb07f3-0fc542e5ef564d73a730a1464f98cef0" >General</label>
+<input type="radio" id="c77bfb86f8674886b16914ad54cb07f3-5f5b1a5c58f74123966252a79650cc64" name="c77bfb86f8674886b16914ad54cb07f3" class="tab" ><label for="c77bfb86f8674886b16914ad54cb07f3-5f5b1a5c58f74123966252a79650cc64" >Startup</label>
+<input type="radio" id="c77bfb86f8674886b16914ad54cb07f3-9c2f5dd5abcd4746a2fdf8953615325e" name="c77bfb86f8674886b16914ad54cb07f3" class="tab" ><label for="c77bfb86f8674886b16914ad54cb07f3-9c2f5dd5abcd4746a2fdf8953615325e" >Android</label>
+<input type="radio" id="c77bfb86f8674886b16914ad54cb07f3-38c5475b028f49329e386aa653c5704c" name="c77bfb86f8674886b16914ad54cb07f3" class="tab" ><label for="c77bfb86f8674886b16914ad54cb07f3-38c5475b028f49329e386aa653c5704c" >iOS</label>
+<input type="radio" id="c77bfb86f8674886b16914ad54cb07f3-c1561201977e4b00b686256bfb1bb88c" name="c77bfb86f8674886b16914ad54cb07f3" class="tab" ><label for="c77bfb86f8674886b16914ad54cb07f3-c1561201977e4b00b686256bfb1bb88c" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
