--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -361,17 +361,20 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="69917c9701e74011bbd545022ee5702f-bc6da6c74ffc48c9a2bd3b961d00418f" name="69917c9701e74011bbd545022ee5702f" class="tab" checked=""><label for="69917c9701e74011bbd545022ee5702f-bc6da6c74ffc48c9a2bd3b961d00418f">General</label>
-<input type="radio" id="69917c9701e74011bbd545022ee5702f-3469c75c84a0426ba3938128965cfa5c" name="69917c9701e74011bbd545022ee5702f" class="tab"><label for="69917c9701e74011bbd545022ee5702f-3469c75c84a0426ba3938128965cfa5c">Startup</label>
-<input type="radio" id="69917c9701e74011bbd545022ee5702f-ff962781f6524d8c8a6acb4b64749627" name="69917c9701e74011bbd545022ee5702f" class="tab"><label for="69917c9701e74011bbd545022ee5702f-ff962781f6524d8c8a6acb4b64749627">Android</label>
-<input type="radio" id="69917c9701e74011bbd545022ee5702f-1571fc9cf610455f857179e7ec104b9b" name="69917c9701e74011bbd545022ee5702f" class="tab"><label for="69917c9701e74011bbd545022ee5702f-1571fc9cf610455f857179e7ec104b9b">iOS</label>
-<input type="radio" id="69917c9701e74011bbd545022ee5702f-35ae63740cdf4ef4969e917e6d4b750d" name="69917c9701e74011bbd545022ee5702f" class="tab"><label for="69917c9701e74011bbd545022ee5702f-35ae63740cdf4ef4969e917e6d4b750d">Windows</label>
+<input type="radio" id="af9d0db0a89a410ca156b957f9f0c83b-270cba90bdd045449942d3646a59c24a" name="af9d0db0a89a410ca156b957f9f0c83b" class="tab" checked=""><label for="af9d0db0a89a410ca156b957f9f0c83b-270cba90bdd045449942d3646a59c24a">General</label>
+<input type="radio" id="af9d0db0a89a410ca156b957f9f0c83b-71e171cae924457396e81658fa506cd3" name="af9d0db0a89a410ca156b957f9f0c83b" class="tab"><label for="af9d0db0a89a410ca156b957f9f0c83b-71e171cae924457396e81658fa506cd3">Startup</label>
+<input type="radio" id="af9d0db0a89a410ca156b957f9f0c83b-39a076f9dd8b4353809ea20375f58af7" name="af9d0db0a89a410ca156b957f9f0c83b" class="tab"><label for="af9d0db0a89a410ca156b957f9f0c83b-39a076f9dd8b4353809ea20375f58af7">Android</label>
+<input type="radio" id="af9d0db0a89a410ca156b957f9f0c83b-67a0d48c42744bebada39d0d1e39e280" name="af9d0db0a89a410ca156b957f9f0c83b" class="tab"><label for="af9d0db0a89a410ca156b957f9f0c83b-67a0d48c42744bebada39d0d1e39e280">iOS</label>
+<input type="radio" id="af9d0db0a89a410ca156b957f9f0c83b-d1578d523f2f422fb8b06863e03e0dac" name="af9d0db0a89a410ca156b957f9f0c83b" class="tab"><label for="af9d0db0a89a410ca156b957f9f0c83b-d1578d523f2f422fb8b06863e03e0dac">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -453,11 +456,11 @@ public override void HandleEventsForBackgroundUrl(UIApplication application, str
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="21a4108a4e90494684b3c673b9ee14eb-037b89f73f9f4af2a097c622d4be2201" name="21a4108a4e90494684b3c673b9ee14eb" class="tab" checked=""><label for="21a4108a4e90494684b3c673b9ee14eb-037b89f73f9f4af2a097c622d4be2201">General</label>
-<input type="radio" id="21a4108a4e90494684b3c673b9ee14eb-96333ebb544f4609ba7b2853da424263" name="21a4108a4e90494684b3c673b9ee14eb" class="tab"><label for="21a4108a4e90494684b3c673b9ee14eb-96333ebb544f4609ba7b2853da424263">Startup</label>
-<input type="radio" id="21a4108a4e90494684b3c673b9ee14eb-9cbf96fcc2b249bc8b9866d12e0dd240" name="21a4108a4e90494684b3c673b9ee14eb" class="tab"><label for="21a4108a4e90494684b3c673b9ee14eb-9cbf96fcc2b249bc8b9866d12e0dd240">Android</label>
-<input type="radio" id="21a4108a4e90494684b3c673b9ee14eb-1264fbf2a138430f83173e32eb34c24c" name="21a4108a4e90494684b3c673b9ee14eb" class="tab"><label for="21a4108a4e90494684b3c673b9ee14eb-1264fbf2a138430f83173e32eb34c24c">iOS</label>
-<input type="radio" id="21a4108a4e90494684b3c673b9ee14eb-64ed336c8c4f40da8a70edc15736257d" name="21a4108a4e90494684b3c673b9ee14eb" class="tab"><label for="21a4108a4e90494684b3c673b9ee14eb-64ed336c8c4f40da8a70edc15736257d">Windows</label>
+<input type="radio" id="31fc657ae7304aa48ea01f94d75e5fe2-555a5a5342fb46a48d6a7f829e8463f3" name="31fc657ae7304aa48ea01f94d75e5fe2" class="tab" checked=""><label for="31fc657ae7304aa48ea01f94d75e5fe2-555a5a5342fb46a48d6a7f829e8463f3">General</label>
+<input type="radio" id="31fc657ae7304aa48ea01f94d75e5fe2-222255882cb24084be9ff5c9c426f936" name="31fc657ae7304aa48ea01f94d75e5fe2" class="tab"><label for="31fc657ae7304aa48ea01f94d75e5fe2-222255882cb24084be9ff5c9c426f936">Startup</label>
+<input type="radio" id="31fc657ae7304aa48ea01f94d75e5fe2-0d1ffc39c6de44d3be1ebb69b447d2fc" name="31fc657ae7304aa48ea01f94d75e5fe2" class="tab"><label for="31fc657ae7304aa48ea01f94d75e5fe2-0d1ffc39c6de44d3be1ebb69b447d2fc">Android</label>
+<input type="radio" id="31fc657ae7304aa48ea01f94d75e5fe2-3d6d78c70b224d7f94a0d480eb90ea4c" name="31fc657ae7304aa48ea01f94d75e5fe2" class="tab"><label for="31fc657ae7304aa48ea01f94d75e5fe2-3d6d78c70b224d7f94a0d480eb90ea4c">iOS</label>
+<input type="radio" id="31fc657ae7304aa48ea01f94d75e5fe2-eb4ad0397be54d499c346c31152c30ed" name="31fc657ae7304aa48ea01f94d75e5fe2" class="tab"><label for="31fc657ae7304aa48ea01f94d75e5fe2-eb4ad0397be54d499c346c31152c30ed">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
