--- a/jobs/getting-started.html
+++ b/jobs/getting-started.html
@@ -363,17 +363,20 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="132144c5eebf497590bf29c60448e927-2480443c53884a828c83d1799ffdca67" name="132144c5eebf497590bf29c60448e927" class="tab" checked><label for="132144c5eebf497590bf29c60448e927-2480443c53884a828c83d1799ffdca67" >General</label>
-<input type="radio" id="132144c5eebf497590bf29c60448e927-fb13dadfb69d4cfb906264490a58ddaa" name="132144c5eebf497590bf29c60448e927" class="tab" ><label for="132144c5eebf497590bf29c60448e927-fb13dadfb69d4cfb906264490a58ddaa" >Startup</label>
-<input type="radio" id="132144c5eebf497590bf29c60448e927-ef0918ff0f454c9abb45cefc8f486f1f" name="132144c5eebf497590bf29c60448e927" class="tab" ><label for="132144c5eebf497590bf29c60448e927-ef0918ff0f454c9abb45cefc8f486f1f" >Android</label>
-<input type="radio" id="132144c5eebf497590bf29c60448e927-309424a146284065a0afd52924014b0b" name="132144c5eebf497590bf29c60448e927" class="tab" ><label for="132144c5eebf497590bf29c60448e927-309424a146284065a0afd52924014b0b" >iOS</label>
-<input type="radio" id="132144c5eebf497590bf29c60448e927-4c96780d6c774b8cb0cbb4664983c1fc" name="132144c5eebf497590bf29c60448e927" class="tab" ><label for="132144c5eebf497590bf29c60448e927-4c96780d6c774b8cb0cbb4664983c1fc" >Windows</label>
+<input type="radio" id="8b4746649f61490797c1bd3c3028314c-fd6d93b08b89433fbabd81e9b43b8412" name="8b4746649f61490797c1bd3c3028314c" class="tab" checked><label for="8b4746649f61490797c1bd3c3028314c-fd6d93b08b89433fbabd81e9b43b8412" >General</label>
+<input type="radio" id="8b4746649f61490797c1bd3c3028314c-51f15890c8424b4a87c7ee88f083133c" name="8b4746649f61490797c1bd3c3028314c" class="tab" ><label for="8b4746649f61490797c1bd3c3028314c-51f15890c8424b4a87c7ee88f083133c" >Startup</label>
+<input type="radio" id="8b4746649f61490797c1bd3c3028314c-ae5c3721270c491caeedb38c9ce22a75" name="8b4746649f61490797c1bd3c3028314c" class="tab" ><label for="8b4746649f61490797c1bd3c3028314c-ae5c3721270c491caeedb38c9ce22a75" >Android</label>
+<input type="radio" id="8b4746649f61490797c1bd3c3028314c-6b711adf036f45bea849a10858578b19" name="8b4746649f61490797c1bd3c3028314c" class="tab" ><label for="8b4746649f61490797c1bd3c3028314c-6b711adf036f45bea849a10858578b19" >iOS</label>
+<input type="radio" id="8b4746649f61490797c1bd3c3028314c-2a69b8bf41eb4fe8bf694bf469046d13" name="8b4746649f61490797c1bd3c3028314c" class="tab" ><label for="8b4746649f61490797c1bd3c3028314c-2a69b8bf41eb4fe8bf694bf469046d13" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
