--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -363,17 +363,20 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="50c470bc4a8049e693fa7bbd379ad75b-57bca1760b114b81a745190a4f6e1284" name="50c470bc4a8049e693fa7bbd379ad75b" class="tab" checked><label for="50c470bc4a8049e693fa7bbd379ad75b-57bca1760b114b81a745190a4f6e1284" >General</label>
-<input type="radio" id="50c470bc4a8049e693fa7bbd379ad75b-2683973581e04322b7b6e1de24c1ccd1" name="50c470bc4a8049e693fa7bbd379ad75b" class="tab" ><label for="50c470bc4a8049e693fa7bbd379ad75b-2683973581e04322b7b6e1de24c1ccd1" >Startup</label>
-<input type="radio" id="50c470bc4a8049e693fa7bbd379ad75b-f6d3009dab73458da16c61154ec876f6" name="50c470bc4a8049e693fa7bbd379ad75b" class="tab" ><label for="50c470bc4a8049e693fa7bbd379ad75b-f6d3009dab73458da16c61154ec876f6" >Android</label>
-<input type="radio" id="50c470bc4a8049e693fa7bbd379ad75b-6651c8471ed64aa4a6861ab0279a80e4" name="50c470bc4a8049e693fa7bbd379ad75b" class="tab" ><label for="50c470bc4a8049e693fa7bbd379ad75b-6651c8471ed64aa4a6861ab0279a80e4" >iOS</label>
-<input type="radio" id="50c470bc4a8049e693fa7bbd379ad75b-94b6b54f2d4b45d2827632b4449b87c8" name="50c470bc4a8049e693fa7bbd379ad75b" class="tab" ><label for="50c470bc4a8049e693fa7bbd379ad75b-94b6b54f2d4b45d2827632b4449b87c8" >Windows</label>
+<input type="radio" id="c62ee1aae93844c985c00d7ecbe07a25-b9ea95ead6c949a1a12f7f9ce67a1eb8" name="c62ee1aae93844c985c00d7ecbe07a25" class="tab" checked><label for="c62ee1aae93844c985c00d7ecbe07a25-b9ea95ead6c949a1a12f7f9ce67a1eb8" >General</label>
+<input type="radio" id="c62ee1aae93844c985c00d7ecbe07a25-d1cbb424758e4369b75a372af86df1ea" name="c62ee1aae93844c985c00d7ecbe07a25" class="tab" ><label for="c62ee1aae93844c985c00d7ecbe07a25-d1cbb424758e4369b75a372af86df1ea" >Startup</label>
+<input type="radio" id="c62ee1aae93844c985c00d7ecbe07a25-380c2fc5877a4679825a3b050372ef88" name="c62ee1aae93844c985c00d7ecbe07a25" class="tab" ><label for="c62ee1aae93844c985c00d7ecbe07a25-380c2fc5877a4679825a3b050372ef88" >Android</label>
+<input type="radio" id="c62ee1aae93844c985c00d7ecbe07a25-de37737d2ed84037889e2ea0fde67429" name="c62ee1aae93844c985c00d7ecbe07a25" class="tab" ><label for="c62ee1aae93844c985c00d7ecbe07a25-de37737d2ed84037889e2ea0fde67429" >iOS</label>
+<input type="radio" id="c62ee1aae93844c985c00d7ecbe07a25-da570400f8514d59bc59518603fdaad1" name="c62ee1aae93844c985c00d7ecbe07a25" class="tab" ><label for="c62ee1aae93844c985c00d7ecbe07a25-da570400f8514d59bc59518603fdaad1" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
