--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -363,6 +363,9 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
@@ -378,10 +381,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="07c673655684453b9b251c92da81bf5d-8adbb491c6d9422888452ac89b546ccf" name="07c673655684453b9b251c92da81bf5d" class="tab" checked><label for="07c673655684453b9b251c92da81bf5d-8adbb491c6d9422888452ac89b546ccf" >General</label>
-<input type="radio" id="07c673655684453b9b251c92da81bf5d-339ff287330d4b749593f61032b0411d" name="07c673655684453b9b251c92da81bf5d" class="tab" ><label for="07c673655684453b9b251c92da81bf5d-339ff287330d4b749593f61032b0411d" >Startup</label>
-<input type="radio" id="07c673655684453b9b251c92da81bf5d-3a67edc0f48948d7a71e652600a7a73b" name="07c673655684453b9b251c92da81bf5d" class="tab" ><label for="07c673655684453b9b251c92da81bf5d-3a67edc0f48948d7a71e652600a7a73b" >Android</label>
-<input type="radio" id="07c673655684453b9b251c92da81bf5d-4a7b30bfe7b942a8a1606ee0fba15465" name="07c673655684453b9b251c92da81bf5d" class="tab" ><label for="07c673655684453b9b251c92da81bf5d-4a7b30bfe7b942a8a1606ee0fba15465" >iOS</label>
+<input type="radio" id="0652d52beae94014a0318908bd28785a-3d1b99f285e643249f707cd041c94e1c" name="0652d52beae94014a0318908bd28785a" class="tab" checked><label for="0652d52beae94014a0318908bd28785a-3d1b99f285e643249f707cd041c94e1c" >General</label>
+<input type="radio" id="0652d52beae94014a0318908bd28785a-26914eda471f4787ba8c05ccb688002a" name="0652d52beae94014a0318908bd28785a" class="tab" ><label for="0652d52beae94014a0318908bd28785a-26914eda471f4787ba8c05ccb688002a" >Startup</label>
+<input type="radio" id="0652d52beae94014a0318908bd28785a-b197a3614a7f4e18b3400cedacc52f55" name="0652d52beae94014a0318908bd28785a" class="tab" ><label for="0652d52beae94014a0318908bd28785a-b197a3614a7f4e18b3400cedacc52f55" >Android</label>
+<input type="radio" id="0652d52beae94014a0318908bd28785a-416e2d9369794b4db99f30f1310d9407" name="0652d52beae94014a0318908bd28785a" class="tab" ><label for="0652d52beae94014a0318908bd28785a-416e2d9369794b4db99f30f1310d9407" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
