--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -361,6 +361,9 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
@@ -370,11 +373,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="442593ef98984653ad2515d72423605a-ea1abab725d94506ba7425846cc16a3a" name="442593ef98984653ad2515d72423605a" class="tab" checked=""><label for="442593ef98984653ad2515d72423605a-ea1abab725d94506ba7425846cc16a3a">General</label>
-<input type="radio" id="442593ef98984653ad2515d72423605a-63f769a84c2448ebb8e02a6a7738bcb1" name="442593ef98984653ad2515d72423605a" class="tab"><label for="442593ef98984653ad2515d72423605a-63f769a84c2448ebb8e02a6a7738bcb1">Startup</label>
-<input type="radio" id="442593ef98984653ad2515d72423605a-c91158cc8f6e495792212202654ad45b" name="442593ef98984653ad2515d72423605a" class="tab"><label for="442593ef98984653ad2515d72423605a-c91158cc8f6e495792212202654ad45b">Android</label>
-<input type="radio" id="442593ef98984653ad2515d72423605a-99d37a957d904b1e8e696e0ba0ea021a" name="442593ef98984653ad2515d72423605a" class="tab"><label for="442593ef98984653ad2515d72423605a-99d37a957d904b1e8e696e0ba0ea021a">iOS</label>
-<input type="radio" id="442593ef98984653ad2515d72423605a-fb9048d3c2a341ae8bb5faf4866cb493" name="442593ef98984653ad2515d72423605a" class="tab"><label for="442593ef98984653ad2515d72423605a-fb9048d3c2a341ae8bb5faf4866cb493">Windows</label>
+<input type="radio" id="3a5de59854c64547903d03dddb90b3f2-30cd0146f2bb4c9194a70e34f9934570" name="3a5de59854c64547903d03dddb90b3f2" class="tab" checked=""><label for="3a5de59854c64547903d03dddb90b3f2-30cd0146f2bb4c9194a70e34f9934570">General</label>
+<input type="radio" id="3a5de59854c64547903d03dddb90b3f2-1e738be68c5c4c79b8a4578abe7c3617" name="3a5de59854c64547903d03dddb90b3f2" class="tab"><label for="3a5de59854c64547903d03dddb90b3f2-1e738be68c5c4c79b8a4578abe7c3617">Startup</label>
+<input type="radio" id="3a5de59854c64547903d03dddb90b3f2-bf30f80f3772416089604f829a1af5b7" name="3a5de59854c64547903d03dddb90b3f2" class="tab"><label for="3a5de59854c64547903d03dddb90b3f2-bf30f80f3772416089604f829a1af5b7">Android</label>
+<input type="radio" id="3a5de59854c64547903d03dddb90b3f2-5d23fc91991d49e19ba06dba38fee553" name="3a5de59854c64547903d03dddb90b3f2" class="tab"><label for="3a5de59854c64547903d03dddb90b3f2-5d23fc91991d49e19ba06dba38fee553">iOS</label>
+<input type="radio" id="3a5de59854c64547903d03dddb90b3f2-1700da7d923745bd9c6163c3a6d19a6a" name="3a5de59854c64547903d03dddb90b3f2" class="tab"><label for="3a5de59854c64547903d03dddb90b3f2-1700da7d923745bd9c6163c3a6d19a6a">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
