--- a/push/azure.html
+++ b/push/azure.html
@@ -363,17 +363,20 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="367693152bcb49b7a21e4eead79a344e-53400dda91594e41b0febec52f8c0e9e" name="367693152bcb49b7a21e4eead79a344e" class="tab" checked><label for="367693152bcb49b7a21e4eead79a344e-53400dda91594e41b0febec52f8c0e9e" >General</label>
-<input type="radio" id="367693152bcb49b7a21e4eead79a344e-242293aa9c384d4a82771180a914956e" name="367693152bcb49b7a21e4eead79a344e" class="tab" ><label for="367693152bcb49b7a21e4eead79a344e-242293aa9c384d4a82771180a914956e" >Startup</label>
-<input type="radio" id="367693152bcb49b7a21e4eead79a344e-d52da8f0d9174a97822f4b463cfcd0ad" name="367693152bcb49b7a21e4eead79a344e" class="tab" ><label for="367693152bcb49b7a21e4eead79a344e-d52da8f0d9174a97822f4b463cfcd0ad" >Android</label>
-<input type="radio" id="367693152bcb49b7a21e4eead79a344e-a1af2ec495604c0b8927bd2d88f7c84e" name="367693152bcb49b7a21e4eead79a344e" class="tab" ><label for="367693152bcb49b7a21e4eead79a344e-a1af2ec495604c0b8927bd2d88f7c84e" >iOS</label>
-<input type="radio" id="367693152bcb49b7a21e4eead79a344e-8a43d00b2e3b4e86ad8f88330a64c75b" name="367693152bcb49b7a21e4eead79a344e" class="tab" ><label for="367693152bcb49b7a21e4eead79a344e-8a43d00b2e3b4e86ad8f88330a64c75b" >Windows</label>
+<input type="radio" id="3fa4c41e11b7404c995a3e9161f2ab47-1c0b78fa45444545b4b23df745622614" name="3fa4c41e11b7404c995a3e9161f2ab47" class="tab" checked><label for="3fa4c41e11b7404c995a3e9161f2ab47-1c0b78fa45444545b4b23df745622614" >General</label>
+<input type="radio" id="3fa4c41e11b7404c995a3e9161f2ab47-3507b33529094ff69ba66ecbde8a9c58" name="3fa4c41e11b7404c995a3e9161f2ab47" class="tab" ><label for="3fa4c41e11b7404c995a3e9161f2ab47-3507b33529094ff69ba66ecbde8a9c58" >Startup</label>
+<input type="radio" id="3fa4c41e11b7404c995a3e9161f2ab47-ffdb8e72f68f402383ce3b51eab87514" name="3fa4c41e11b7404c995a3e9161f2ab47" class="tab" ><label for="3fa4c41e11b7404c995a3e9161f2ab47-ffdb8e72f68f402383ce3b51eab87514" >Android</label>
+<input type="radio" id="3fa4c41e11b7404c995a3e9161f2ab47-98e2930df42f4ce0a4ce0eab18267ea5" name="3fa4c41e11b7404c995a3e9161f2ab47" class="tab" ><label for="3fa4c41e11b7404c995a3e9161f2ab47-98e2930df42f4ce0a4ce0eab18267ea5" >iOS</label>
+<input type="radio" id="3fa4c41e11b7404c995a3e9161f2ab47-c60169cb4be64e7ea5bc44597371fc0b" name="3fa4c41e11b7404c995a3e9161f2ab47" class="tab" ><label for="3fa4c41e11b7404c995a3e9161f2ab47-c60169cb4be64e7ea5bc44597371fc0b" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
