--- a/push/firebase.html
+++ b/push/firebase.html
@@ -361,16 +361,19 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="025bcbd84648490da1ecf6052ee8ea15-5a55ca9828f7448eaf66747973b26753" name="025bcbd84648490da1ecf6052ee8ea15" class="tab" checked=""><label for="025bcbd84648490da1ecf6052ee8ea15-5a55ca9828f7448eaf66747973b26753">General</label>
-<input type="radio" id="025bcbd84648490da1ecf6052ee8ea15-ff4e5cab112a49cc99933b190f16bdfa" name="025bcbd84648490da1ecf6052ee8ea15" class="tab"><label for="025bcbd84648490da1ecf6052ee8ea15-ff4e5cab112a49cc99933b190f16bdfa">Startup</label>
-<input type="radio" id="025bcbd84648490da1ecf6052ee8ea15-f1b33619980c4f11a8cbce273b6175a3" name="025bcbd84648490da1ecf6052ee8ea15" class="tab"><label for="025bcbd84648490da1ecf6052ee8ea15-f1b33619980c4f11a8cbce273b6175a3">Android</label>
-<input type="radio" id="025bcbd84648490da1ecf6052ee8ea15-9a7f32890b594957888dfc76505cacb0" name="025bcbd84648490da1ecf6052ee8ea15" class="tab"><label for="025bcbd84648490da1ecf6052ee8ea15-9a7f32890b594957888dfc76505cacb0">iOS</label>
+<input type="radio" id="00400388c5c341daa827938e6bee2455-eb995a5d4a884d4aa8f453fdb29f8e49" name="00400388c5c341daa827938e6bee2455" class="tab" checked=""><label for="00400388c5c341daa827938e6bee2455-eb995a5d4a884d4aa8f453fdb29f8e49">General</label>
+<input type="radio" id="00400388c5c341daa827938e6bee2455-bd666a2a478e46e7b50507bcf6fbd84d" name="00400388c5c341daa827938e6bee2455" class="tab"><label for="00400388c5c341daa827938e6bee2455-bd666a2a478e46e7b50507bcf6fbd84d">Startup</label>
+<input type="radio" id="00400388c5c341daa827938e6bee2455-2ea44947eefa430c9e0e9f53a2b3bde8" name="00400388c5c341daa827938e6bee2455" class="tab"><label for="00400388c5c341daa827938e6bee2455-2ea44947eefa430c9e0e9f53a2b3bde8">Android</label>
+<input type="radio" id="00400388c5c341daa827938e6bee2455-53c2f2d0f56a4ace92e835edd4137d5c" name="00400388c5c341daa827938e6bee2455" class="tab"><label for="00400388c5c341daa827938e6bee2455-53c2f2d0f56a4ace92e835edd4137d5c">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
