--- a/push/onesignal.html
+++ b/push/onesignal.html
@@ -363,16 +363,19 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="e749069980db47559dc35a6ba6010b53-d9ddc19058704a37828995c65fa4e1b1" name="e749069980db47559dc35a6ba6010b53" class="tab" checked><label for="e749069980db47559dc35a6ba6010b53-d9ddc19058704a37828995c65fa4e1b1" >General</label>
-<input type="radio" id="e749069980db47559dc35a6ba6010b53-87fdecba20a143599da030b4f0da379b" name="e749069980db47559dc35a6ba6010b53" class="tab" ><label for="e749069980db47559dc35a6ba6010b53-87fdecba20a143599da030b4f0da379b" >Startup</label>
-<input type="radio" id="e749069980db47559dc35a6ba6010b53-259cff2618ad4084b4e6dfe62888c194" name="e749069980db47559dc35a6ba6010b53" class="tab" ><label for="e749069980db47559dc35a6ba6010b53-259cff2618ad4084b4e6dfe62888c194" >Android</label>
-<input type="radio" id="e749069980db47559dc35a6ba6010b53-1a918f1cdd364c87875bed455918cb87" name="e749069980db47559dc35a6ba6010b53" class="tab" ><label for="e749069980db47559dc35a6ba6010b53-1a918f1cdd364c87875bed455918cb87" >iOS</label>
+<input type="radio" id="885138b3aea54f1e80f26f7e9c6a903e-5040a4c035e3460896606358e65c249d" name="885138b3aea54f1e80f26f7e9c6a903e" class="tab" checked><label for="885138b3aea54f1e80f26f7e9c6a903e-5040a4c035e3460896606358e65c249d" >General</label>
+<input type="radio" id="885138b3aea54f1e80f26f7e9c6a903e-2025e6857a654486b6c437770c5a9614" name="885138b3aea54f1e80f26f7e9c6a903e" class="tab" ><label for="885138b3aea54f1e80f26f7e9c6a903e-2025e6857a654486b6c437770c5a9614" >Startup</label>
+<input type="radio" id="885138b3aea54f1e80f26f7e9c6a903e-de4d965cc76a4aab9c6fd4490865e99a" name="885138b3aea54f1e80f26f7e9c6a903e" class="tab" ><label for="885138b3aea54f1e80f26f7e9c6a903e-de4d965cc76a4aab9c6fd4490865e99a" >Android</label>
+<input type="radio" id="885138b3aea54f1e80f26f7e9c6a903e-ae2630f0692441358ef36a789a2a8909" name="885138b3aea54f1e80f26f7e9c6a903e" class="tab" ><label for="885138b3aea54f1e80f26f7e9c6a903e-ae2630f0692441358ef36a789a2a8909" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
