--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -363,6 +363,9 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
@@ -382,6 +385,7 @@
         <li><a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a></li>
         <li><a href="/release-notes/v230">v2.3.0</a></li>
         <li><a href="/release-notes/v240">v2.4.0</a></li>
+        <li><a href="/release-notes/v241">v2.4.1</a></li>
         <li><a href="/release-notes/nextrelease">Next Release</a></li>
 </ul>
                                 </div>
