--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -363,17 +363,20 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="842f6b19375f4574a8986f49ae82bdf0-eb05ac1942b54dcaa949e7739e40cbb4" name="842f6b19375f4574a8986f49ae82bdf0" class="tab" checked><label for="842f6b19375f4574a8986f49ae82bdf0-eb05ac1942b54dcaa949e7739e40cbb4" >General</label>
-<input type="radio" id="842f6b19375f4574a8986f49ae82bdf0-31f191b96e8b4f4699da49478f5b3125" name="842f6b19375f4574a8986f49ae82bdf0" class="tab" ><label for="842f6b19375f4574a8986f49ae82bdf0-31f191b96e8b4f4699da49478f5b3125" >Startup</label>
-<input type="radio" id="842f6b19375f4574a8986f49ae82bdf0-47442c6339c04c6690a6f181d40f738c" name="842f6b19375f4574a8986f49ae82bdf0" class="tab" ><label for="842f6b19375f4574a8986f49ae82bdf0-47442c6339c04c6690a6f181d40f738c" >Android</label>
-<input type="radio" id="842f6b19375f4574a8986f49ae82bdf0-9293d643be9b43b8ab5f3cfa8f194c94" name="842f6b19375f4574a8986f49ae82bdf0" class="tab" ><label for="842f6b19375f4574a8986f49ae82bdf0-9293d643be9b43b8ab5f3cfa8f194c94" >iOS</label>
-<input type="radio" id="842f6b19375f4574a8986f49ae82bdf0-e8889822cc544282aa42a954b1362c08" name="842f6b19375f4574a8986f49ae82bdf0" class="tab" ><label for="842f6b19375f4574a8986f49ae82bdf0-e8889822cc544282aa42a954b1362c08" >Windows</label>
+<input type="radio" id="aa521208761f4edc8d552c710d240bf7-437f95cb1e874f9894d22569378dfc06" name="aa521208761f4edc8d552c710d240bf7" class="tab" checked><label for="aa521208761f4edc8d552c710d240bf7-437f95cb1e874f9894d22569378dfc06" >General</label>
+<input type="radio" id="aa521208761f4edc8d552c710d240bf7-a6f7f7f109074c65a57de480dae5752a" name="aa521208761f4edc8d552c710d240bf7" class="tab" ><label for="aa521208761f4edc8d552c710d240bf7-a6f7f7f109074c65a57de480dae5752a" >Startup</label>
+<input type="radio" id="aa521208761f4edc8d552c710d240bf7-68a9c0a283914adfb952d40e2232cbb4" name="aa521208761f4edc8d552c710d240bf7" class="tab" ><label for="aa521208761f4edc8d552c710d240bf7-68a9c0a283914adfb952d40e2232cbb4" >Android</label>
+<input type="radio" id="aa521208761f4edc8d552c710d240bf7-97d3244518ed41aea19b162fbd0ad314" name="aa521208761f4edc8d552c710d240bf7" class="tab" ><label for="aa521208761f4edc8d552c710d240bf7-97d3244518ed41aea19b162fbd0ad314" >iOS</label>
+<input type="radio" id="aa521208761f4edc8d552c710d240bf7-353a37dfb9064219a34b0a37b233f7f7" name="aa521208761f4edc8d552c710d240bf7" class="tab" ><label for="aa521208761f4edc8d552c710d240bf7-353a37dfb9064219a34b0a37b233f7f7" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
