--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -363,16 +363,19 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="772b2eba308b469c926def62cace157d-1e5caf861d6044b2ae71959e42948f86" name="772b2eba308b469c926def62cace157d" class="tab" checked><label for="772b2eba308b469c926def62cace157d-1e5caf861d6044b2ae71959e42948f86" >General</label>
-<input type="radio" id="772b2eba308b469c926def62cace157d-a5bafeb24f984e3ba8f1bb08aa71f755" name="772b2eba308b469c926def62cace157d" class="tab" ><label for="772b2eba308b469c926def62cace157d-a5bafeb24f984e3ba8f1bb08aa71f755" >Startup</label>
-<input type="radio" id="772b2eba308b469c926def62cace157d-95680cc083fc4acda91a0043271a926d" name="772b2eba308b469c926def62cace157d" class="tab" ><label for="772b2eba308b469c926def62cace157d-95680cc083fc4acda91a0043271a926d" >Android</label>
-<input type="radio" id="772b2eba308b469c926def62cace157d-f689ad4912374cdb9c37887227c76c2c" name="772b2eba308b469c926def62cace157d" class="tab" ><label for="772b2eba308b469c926def62cace157d-f689ad4912374cdb9c37887227c76c2c" >Windows</label>
+<input type="radio" id="9a6073f9f2f640dea9a974863abffcc7-47037b8ce867401faf2df37c2b7fa9e2" name="9a6073f9f2f640dea9a974863abffcc7" class="tab" checked><label for="9a6073f9f2f640dea9a974863abffcc7-47037b8ce867401faf2df37c2b7fa9e2" >General</label>
+<input type="radio" id="9a6073f9f2f640dea9a974863abffcc7-5b43260718d24c8d883f0fad74924084" name="9a6073f9f2f640dea9a974863abffcc7" class="tab" ><label for="9a6073f9f2f640dea9a974863abffcc7-5b43260718d24c8d883f0fad74924084" >Startup</label>
+<input type="radio" id="9a6073f9f2f640dea9a974863abffcc7-3334081cf5e54aedb9ee3c218ef2bac1" name="9a6073f9f2f640dea9a974863abffcc7" class="tab" ><label for="9a6073f9f2f640dea9a974863abffcc7-3334081cf5e54aedb9ee3c218ef2bac1" >Android</label>
+<input type="radio" id="9a6073f9f2f640dea9a974863abffcc7-50f9c6350f8747149190d7ef6418dcdd" name="9a6073f9f2f640dea9a974863abffcc7" class="tab" ><label for="9a6073f9f2f640dea9a974863abffcc7-50f9c6350f8747149190d7ef6418dcdd" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
