--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -363,17 +363,20 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="35f3eb087142471f8853c0ecb5817112-023419d7d2d84fc5861b19a8a9331541" name="35f3eb087142471f8853c0ecb5817112" class="tab" checked><label for="35f3eb087142471f8853c0ecb5817112-023419d7d2d84fc5861b19a8a9331541" >General</label>
-<input type="radio" id="35f3eb087142471f8853c0ecb5817112-fe77d948b7e74405b4172acde5e7c31c" name="35f3eb087142471f8853c0ecb5817112" class="tab" ><label for="35f3eb087142471f8853c0ecb5817112-fe77d948b7e74405b4172acde5e7c31c" >Startup</label>
-<input type="radio" id="35f3eb087142471f8853c0ecb5817112-e52f90dfa3404fbaa0090ed71d0e533c" name="35f3eb087142471f8853c0ecb5817112" class="tab" ><label for="35f3eb087142471f8853c0ecb5817112-e52f90dfa3404fbaa0090ed71d0e533c" >Android</label>
-<input type="radio" id="35f3eb087142471f8853c0ecb5817112-4c8a6f2a56d547b0af0de75447b6a132" name="35f3eb087142471f8853c0ecb5817112" class="tab" ><label for="35f3eb087142471f8853c0ecb5817112-4c8a6f2a56d547b0af0de75447b6a132" >iOS</label>
-<input type="radio" id="35f3eb087142471f8853c0ecb5817112-bfa5256f0e3f491f8be58ef9adf9cbc6" name="35f3eb087142471f8853c0ecb5817112" class="tab" ><label for="35f3eb087142471f8853c0ecb5817112-bfa5256f0e3f491f8be58ef9adf9cbc6" >Windows</label>
+<input type="radio" id="b154c23c43ae429c8c4da2d9365c8867-35aa681d20c3461a8305467a1beddd29" name="b154c23c43ae429c8c4da2d9365c8867" class="tab" checked><label for="b154c23c43ae429c8c4da2d9365c8867-35aa681d20c3461a8305467a1beddd29" >General</label>
+<input type="radio" id="b154c23c43ae429c8c4da2d9365c8867-047dbdf8613a46c5ab3914e86e3c8ce0" name="b154c23c43ae429c8c4da2d9365c8867" class="tab" ><label for="b154c23c43ae429c8c4da2d9365c8867-047dbdf8613a46c5ab3914e86e3c8ce0" >Startup</label>
+<input type="radio" id="b154c23c43ae429c8c4da2d9365c8867-6ecf27363dc14cd1b5f29414f6249e34" name="b154c23c43ae429c8c4da2d9365c8867" class="tab" ><label for="b154c23c43ae429c8c4da2d9365c8867-6ecf27363dc14cd1b5f29414f6249e34" >Android</label>
+<input type="radio" id="b154c23c43ae429c8c4da2d9365c8867-eee499fafd45440eb7bd91f81624f08c" name="b154c23c43ae429c8c4da2d9365c8867" class="tab" ><label for="b154c23c43ae429c8c4da2d9365c8867-eee499fafd45440eb7bd91f81624f08c" >iOS</label>
+<input type="radio" id="b154c23c43ae429c8c4da2d9365c8867-1d5b5ace07f2478aa220c62c8fd546bc" name="b154c23c43ae429c8c4da2d9365c8867" class="tab" ><label for="b154c23c43ae429c8c4da2d9365c8867-1d5b5ace07f2478aa220c62c8fd546bc" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
