--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -363,17 +363,20 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="d6d36225a21541638bce344a700caafc-0b91533ce56e46229f70dc16d1d027e8" name="d6d36225a21541638bce344a700caafc" class="tab" checked><label for="d6d36225a21541638bce344a700caafc-0b91533ce56e46229f70dc16d1d027e8" >General</label>
-<input type="radio" id="d6d36225a21541638bce344a700caafc-d54a84859ac146b3a925de167abbaf73" name="d6d36225a21541638bce344a700caafc" class="tab" ><label for="d6d36225a21541638bce344a700caafc-d54a84859ac146b3a925de167abbaf73" >Startup</label>
-<input type="radio" id="d6d36225a21541638bce344a700caafc-ad6f542497e348299a66015d3f5e4d6d" name="d6d36225a21541638bce344a700caafc" class="tab" ><label for="d6d36225a21541638bce344a700caafc-ad6f542497e348299a66015d3f5e4d6d" >Android</label>
-<input type="radio" id="d6d36225a21541638bce344a700caafc-f047b0434a4a4576a0f3ee567ad0d615" name="d6d36225a21541638bce344a700caafc" class="tab" ><label for="d6d36225a21541638bce344a700caafc-f047b0434a4a4576a0f3ee567ad0d615" >iOS</label>
-<input type="radio" id="d6d36225a21541638bce344a700caafc-2d0482aef7424b7fba049bb1a5904c57" name="d6d36225a21541638bce344a700caafc" class="tab" ><label for="d6d36225a21541638bce344a700caafc-2d0482aef7424b7fba049bb1a5904c57" >Windows</label>
+<input type="radio" id="a3fbb0c4874f4da08c036c49378b0001-e3f878e28c124645a8d5e016d49fa240" name="a3fbb0c4874f4da08c036c49378b0001" class="tab" checked><label for="a3fbb0c4874f4da08c036c49378b0001-e3f878e28c124645a8d5e016d49fa240" >General</label>
+<input type="radio" id="a3fbb0c4874f4da08c036c49378b0001-041c7d09a0654fc6b41b2ad35fbbf91e" name="a3fbb0c4874f4da08c036c49378b0001" class="tab" ><label for="a3fbb0c4874f4da08c036c49378b0001-041c7d09a0654fc6b41b2ad35fbbf91e" >Startup</label>
+<input type="radio" id="a3fbb0c4874f4da08c036c49378b0001-e15052044f194d3cb653c1dc72c613b8" name="a3fbb0c4874f4da08c036c49378b0001" class="tab" ><label for="a3fbb0c4874f4da08c036c49378b0001-e15052044f194d3cb653c1dc72c613b8" >Android</label>
+<input type="radio" id="a3fbb0c4874f4da08c036c49378b0001-f5a22851589d40e6864b3dc57097d795" name="a3fbb0c4874f4da08c036c49378b0001" class="tab" ><label for="a3fbb0c4874f4da08c036c49378b0001-f5a22851589d40e6864b3dc57097d795" >iOS</label>
+<input type="radio" id="a3fbb0c4874f4da08c036c49378b0001-e773de3856d54874a645e8a618d29d43" name="a3fbb0c4874f4da08c036c49378b0001" class="tab" ><label for="a3fbb0c4874f4da08c036c49378b0001-e773de3856d54874a645e8a618d29d43" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
