--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -363,15 +363,18 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="9d0964ddffa34e299a230efaa3387a46-37a2f2fca28a455b9f4080e29858d700" name="9d0964ddffa34e299a230efaa3387a46" class="tab" checked><label for="9d0964ddffa34e299a230efaa3387a46-37a2f2fca28a455b9f4080e29858d700" >General</label>
-<input type="radio" id="9d0964ddffa34e299a230efaa3387a46-d8f6a4aa049041a98cd55e6459242d96" name="9d0964ddffa34e299a230efaa3387a46" class="tab" ><label for="9d0964ddffa34e299a230efaa3387a46-d8f6a4aa049041a98cd55e6459242d96" >Startup</label>
-<input type="radio" id="9d0964ddffa34e299a230efaa3387a46-f27adda707f447d6820ed7fe068d9e83" name="9d0964ddffa34e299a230efaa3387a46" class="tab" ><label for="9d0964ddffa34e299a230efaa3387a46-f27adda707f447d6820ed7fe068d9e83" >Android</label>
+<input type="radio" id="6c797261b3504e01bc55e4cd73b0bce9-fbbded9fcef946fea7a4d5604fdb9f85" name="6c797261b3504e01bc55e4cd73b0bce9" class="tab" checked><label for="6c797261b3504e01bc55e4cd73b0bce9-fbbded9fcef946fea7a4d5604fdb9f85" >General</label>
+<input type="radio" id="6c797261b3504e01bc55e4cd73b0bce9-b5bbec01610348ad9a33162a0b824c37" name="6c797261b3504e01bc55e4cd73b0bce9" class="tab" ><label for="6c797261b3504e01bc55e4cd73b0bce9-b5bbec01610348ad9a33162a0b824c37" >Startup</label>
+<input type="radio" id="6c797261b3504e01bc55e4cd73b0bce9-cbba71f744f44d0d81be996292d80bcb" name="6c797261b3504e01bc55e4cd73b0bce9" class="tab" ><label for="6c797261b3504e01bc55e4cd73b0bce9-cbba71f744f44d0d81be996292d80bcb" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
