--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -363,17 +363,20 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="2280e6e697cd4046b61507d496fd13e0-a7ba3e8f370a475ea584671c0ee94816" name="2280e6e697cd4046b61507d496fd13e0" class="tab" checked><label for="2280e6e697cd4046b61507d496fd13e0-a7ba3e8f370a475ea584671c0ee94816" >General</label>
-<input type="radio" id="2280e6e697cd4046b61507d496fd13e0-d7354b0e75e34fa89b0701f75566f4d6" name="2280e6e697cd4046b61507d496fd13e0" class="tab" ><label for="2280e6e697cd4046b61507d496fd13e0-d7354b0e75e34fa89b0701f75566f4d6" >Startup</label>
-<input type="radio" id="2280e6e697cd4046b61507d496fd13e0-4287fdfc7e8e4947ae6f293da3e2e2b8" name="2280e6e697cd4046b61507d496fd13e0" class="tab" ><label for="2280e6e697cd4046b61507d496fd13e0-4287fdfc7e8e4947ae6f293da3e2e2b8" >Android</label>
-<input type="radio" id="2280e6e697cd4046b61507d496fd13e0-26c0deb517224b04acb9e953b3b1f7f9" name="2280e6e697cd4046b61507d496fd13e0" class="tab" ><label for="2280e6e697cd4046b61507d496fd13e0-26c0deb517224b04acb9e953b3b1f7f9" >iOS</label>
-<input type="radio" id="2280e6e697cd4046b61507d496fd13e0-15878f2d32f64767918554759ea04e90" name="2280e6e697cd4046b61507d496fd13e0" class="tab" ><label for="2280e6e697cd4046b61507d496fd13e0-15878f2d32f64767918554759ea04e90" >Windows</label>
+<input type="radio" id="329bc4b6a4b54436bc8e32773e837943-58da1447705d4ced88f891ccb42b0ba6" name="329bc4b6a4b54436bc8e32773e837943" class="tab" checked><label for="329bc4b6a4b54436bc8e32773e837943-58da1447705d4ced88f891ccb42b0ba6" >General</label>
+<input type="radio" id="329bc4b6a4b54436bc8e32773e837943-7eac3a73fad142efa8a5bb120048ed84" name="329bc4b6a4b54436bc8e32773e837943" class="tab" ><label for="329bc4b6a4b54436bc8e32773e837943-7eac3a73fad142efa8a5bb120048ed84" >Startup</label>
+<input type="radio" id="329bc4b6a4b54436bc8e32773e837943-80c206522c9c4db99f427cc38b3ab960" name="329bc4b6a4b54436bc8e32773e837943" class="tab" ><label for="329bc4b6a4b54436bc8e32773e837943-80c206522c9c4db99f427cc38b3ab960" >Android</label>
+<input type="radio" id="329bc4b6a4b54436bc8e32773e837943-72e2d483739a4357a169e48428a0efda" name="329bc4b6a4b54436bc8e32773e837943" class="tab" ><label for="329bc4b6a4b54436bc8e32773e837943-72e2d483739a4357a169e48428a0efda" >iOS</label>
+<input type="radio" id="329bc4b6a4b54436bc8e32773e837943-3d726488679a4e24a3920fed27a1a460" name="329bc4b6a4b54436bc8e32773e837943" class="tab" ><label for="329bc4b6a4b54436bc8e32773e837943-3d726488679a4e24a3920fed27a1a460" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
