--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -363,16 +363,19 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="34aee93c923743c692cb5e4cfb3b5da1-f3df3fd9471c4aff813e20954b73ee99" name="34aee93c923743c692cb5e4cfb3b5da1" class="tab" checked><label for="34aee93c923743c692cb5e4cfb3b5da1-f3df3fd9471c4aff813e20954b73ee99" >General</label>
-<input type="radio" id="34aee93c923743c692cb5e4cfb3b5da1-50ab39bc666d496cb795fc48ef6a6cd1" name="34aee93c923743c692cb5e4cfb3b5da1" class="tab" ><label for="34aee93c923743c692cb5e4cfb3b5da1-50ab39bc666d496cb795fc48ef6a6cd1" >Startup</label>
-<input type="radio" id="34aee93c923743c692cb5e4cfb3b5da1-0d67c3c4f27d47eba20c5a61174ba238" name="34aee93c923743c692cb5e4cfb3b5da1" class="tab" ><label for="34aee93c923743c692cb5e4cfb3b5da1-0d67c3c4f27d47eba20c5a61174ba238" >Android</label>
-<input type="radio" id="34aee93c923743c692cb5e4cfb3b5da1-5f2982336dee44a1a3788651aab71a7f" name="34aee93c923743c692cb5e4cfb3b5da1" class="tab" ><label for="34aee93c923743c692cb5e4cfb3b5da1-5f2982336dee44a1a3788651aab71a7f" >iOS</label>
+<input type="radio" id="a07227973dee4a0f8467d6edbaefe84b-b9bdcb44c3004c76bf46f0a03c415dcc" name="a07227973dee4a0f8467d6edbaefe84b" class="tab" checked><label for="a07227973dee4a0f8467d6edbaefe84b-b9bdcb44c3004c76bf46f0a03c415dcc" >General</label>
+<input type="radio" id="a07227973dee4a0f8467d6edbaefe84b-180dcbaa4b424ae18abe3ee7b9c9d745" name="a07227973dee4a0f8467d6edbaefe84b" class="tab" ><label for="a07227973dee4a0f8467d6edbaefe84b-180dcbaa4b424ae18abe3ee7b9c9d745" >Startup</label>
+<input type="radio" id="a07227973dee4a0f8467d6edbaefe84b-54f708b678c74ccf895b88c16a92bf57" name="a07227973dee4a0f8467d6edbaefe84b" class="tab" ><label for="a07227973dee4a0f8467d6edbaefe84b-54f708b678c74ccf895b88c16a92bf57" >Android</label>
+<input type="radio" id="a07227973dee4a0f8467d6edbaefe84b-4c1620b42f544dad9e1f5949cb96d2ad" name="a07227973dee4a0f8467d6edbaefe84b" class="tab" ><label for="a07227973dee4a0f8467d6edbaefe84b-4c1620b42f544dad9e1f5949cb96d2ad" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
