--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -363,15 +363,18 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="472a104a4e7243ecb53de31ee3940654-9b5d0ced9eeb47f1847f346a88c22f01" name="472a104a4e7243ecb53de31ee3940654" class="tab" checked><label for="472a104a4e7243ecb53de31ee3940654-9b5d0ced9eeb47f1847f346a88c22f01" >General</label>
-<input type="radio" id="472a104a4e7243ecb53de31ee3940654-d91d8268d30d401a92c4526728812a03" name="472a104a4e7243ecb53de31ee3940654" class="tab" ><label for="472a104a4e7243ecb53de31ee3940654-d91d8268d30d401a92c4526728812a03" >Startup</label>
-<input type="radio" id="472a104a4e7243ecb53de31ee3940654-6aa577ca4b08476b90734517cec633e4" name="472a104a4e7243ecb53de31ee3940654" class="tab" ><label for="472a104a4e7243ecb53de31ee3940654-6aa577ca4b08476b90734517cec633e4" >Android</label>
+<input type="radio" id="c16e316f6dce4cec8c61b1a5eeefae95-cc84311104b7458e8a06f78340bfb4fd" name="c16e316f6dce4cec8c61b1a5eeefae95" class="tab" checked><label for="c16e316f6dce4cec8c61b1a5eeefae95-cc84311104b7458e8a06f78340bfb4fd" >General</label>
+<input type="radio" id="c16e316f6dce4cec8c61b1a5eeefae95-dd6a8daac0834ee6811ecae353005782" name="c16e316f6dce4cec8c61b1a5eeefae95" class="tab" ><label for="c16e316f6dce4cec8c61b1a5eeefae95-dd6a8daac0834ee6811ecae353005782" >Startup</label>
+<input type="radio" id="c16e316f6dce4cec8c61b1a5eeefae95-157fada809ca44f18503bd14ea66b37d" name="c16e316f6dce4cec8c61b1a5eeefae95" class="tab" ><label for="c16e316f6dce4cec8c61b1a5eeefae95-157fada809ca44f18503bd14ea66b37d" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
