--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -363,6 +363,9 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
@@ -375,11 +378,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="9ebb5ae9eb6a4f90a817fe94818bb2c5-c4f3f773963549f5bfbfdcf2ef3b2d80" name="9ebb5ae9eb6a4f90a817fe94818bb2c5" class="tab" checked><label for="9ebb5ae9eb6a4f90a817fe94818bb2c5-c4f3f773963549f5bfbfdcf2ef3b2d80" >General</label>
-<input type="radio" id="9ebb5ae9eb6a4f90a817fe94818bb2c5-5b36f06db1464e6ca782ee477404ce88" name="9ebb5ae9eb6a4f90a817fe94818bb2c5" class="tab" ><label for="9ebb5ae9eb6a4f90a817fe94818bb2c5-5b36f06db1464e6ca782ee477404ce88" >Startup</label>
-<input type="radio" id="9ebb5ae9eb6a4f90a817fe94818bb2c5-af93a510450b43b9b650d226596f5989" name="9ebb5ae9eb6a4f90a817fe94818bb2c5" class="tab" ><label for="9ebb5ae9eb6a4f90a817fe94818bb2c5-af93a510450b43b9b650d226596f5989" >Android</label>
-<input type="radio" id="9ebb5ae9eb6a4f90a817fe94818bb2c5-02bde3e5cef048509bf0e0967b292c0f" name="9ebb5ae9eb6a4f90a817fe94818bb2c5" class="tab" ><label for="9ebb5ae9eb6a4f90a817fe94818bb2c5-02bde3e5cef048509bf0e0967b292c0f" >iOS</label>
-<input type="radio" id="9ebb5ae9eb6a4f90a817fe94818bb2c5-0a9327aef1a04e82bf361a1ca5b09317" name="9ebb5ae9eb6a4f90a817fe94818bb2c5" class="tab" ><label for="9ebb5ae9eb6a4f90a817fe94818bb2c5-0a9327aef1a04e82bf361a1ca5b09317" >Windows</label></li>
+<input type="radio" id="a9485c1d3f16477db8330f8698ac56cd-baa9bb4c237d4bfcb0cd173e919009f4" name="a9485c1d3f16477db8330f8698ac56cd" class="tab" checked><label for="a9485c1d3f16477db8330f8698ac56cd-baa9bb4c237d4bfcb0cd173e919009f4" >General</label>
+<input type="radio" id="a9485c1d3f16477db8330f8698ac56cd-d056c5258428472190c8885ac592acad" name="a9485c1d3f16477db8330f8698ac56cd" class="tab" ><label for="a9485c1d3f16477db8330f8698ac56cd-d056c5258428472190c8885ac592acad" >Startup</label>
+<input type="radio" id="a9485c1d3f16477db8330f8698ac56cd-64d0d8321d9d43c38c578b91fc9a72b1" name="a9485c1d3f16477db8330f8698ac56cd" class="tab" ><label for="a9485c1d3f16477db8330f8698ac56cd-64d0d8321d9d43c38c578b91fc9a72b1" >Android</label>
+<input type="radio" id="a9485c1d3f16477db8330f8698ac56cd-1e5e32a729a3434cb39467f170b8cae3" name="a9485c1d3f16477db8330f8698ac56cd" class="tab" ><label for="a9485c1d3f16477db8330f8698ac56cd-1e5e32a729a3434cb39467f170b8cae3" >iOS</label>
+<input type="radio" id="a9485c1d3f16477db8330f8698ac56cd-5b61f065befc4b72aedc23522ad6e8b9" name="a9485c1d3f16477db8330f8698ac56cd" class="tab" ><label for="a9485c1d3f16477db8330f8698ac56cd-5b61f065befc4b72aedc23522ad6e8b9" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
