--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -363,6 +363,9 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
@@ -370,10 +373,10 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="517fb9ed1aac416fac8439b55c1c6fef-54008c425c7647cb9c40f67df0f024d0" name="517fb9ed1aac416fac8439b55c1c6fef" class="tab" checked><label for="517fb9ed1aac416fac8439b55c1c6fef-54008c425c7647cb9c40f67df0f024d0" >General</label>
-<input type="radio" id="517fb9ed1aac416fac8439b55c1c6fef-8edb703a97ad4d24931bc90454fefb5a" name="517fb9ed1aac416fac8439b55c1c6fef" class="tab" ><label for="517fb9ed1aac416fac8439b55c1c6fef-8edb703a97ad4d24931bc90454fefb5a" >Startup</label>
-<input type="radio" id="517fb9ed1aac416fac8439b55c1c6fef-4fb328d60eee46fda44c6a463000ddb1" name="517fb9ed1aac416fac8439b55c1c6fef" class="tab" ><label for="517fb9ed1aac416fac8439b55c1c6fef-4fb328d60eee46fda44c6a463000ddb1" >Android</label>
-<input type="radio" id="517fb9ed1aac416fac8439b55c1c6fef-2bceac936568480ebeffa177dd8dac9f" name="517fb9ed1aac416fac8439b55c1c6fef" class="tab" ><label for="517fb9ed1aac416fac8439b55c1c6fef-2bceac936568480ebeffa177dd8dac9f" >iOS</label>
+<input type="radio" id="8758d57451b542e0aa57766a1651709e-e2cb7ad46b6b40d19c6baa07bfcf6d49" name="8758d57451b542e0aa57766a1651709e" class="tab" checked><label for="8758d57451b542e0aa57766a1651709e-e2cb7ad46b6b40d19c6baa07bfcf6d49" >General</label>
+<input type="radio" id="8758d57451b542e0aa57766a1651709e-8c170219f988402c9f98675bf5efab6f" name="8758d57451b542e0aa57766a1651709e" class="tab" ><label for="8758d57451b542e0aa57766a1651709e-8c170219f988402c9f98675bf5efab6f" >Startup</label>
+<input type="radio" id="8758d57451b542e0aa57766a1651709e-88e87756493d42c699efa0d5a2b0c0e3" name="8758d57451b542e0aa57766a1651709e" class="tab" ><label for="8758d57451b542e0aa57766a1651709e-88e87756493d42c699efa0d5a2b0c0e3" >Android</label>
+<input type="radio" id="8758d57451b542e0aa57766a1651709e-2ec68623161840a98541e478484f0c91" name="8758d57451b542e0aa57766a1651709e" class="tab" ><label for="8758d57451b542e0aa57766a1651709e-2ec68623161840a98541e478484f0c91" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
