--- a/locations/gps.html
+++ b/locations/gps.html
@@ -363,6 +363,9 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
@@ -370,11 +373,11 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="24ed9616bac44ef390093e1ffc048c1f-962e8f135d6c45d8a7b29bc1bec45763" name="24ed9616bac44ef390093e1ffc048c1f" class="tab" checked><label for="24ed9616bac44ef390093e1ffc048c1f-962e8f135d6c45d8a7b29bc1bec45763" >General</label>
-<input type="radio" id="24ed9616bac44ef390093e1ffc048c1f-9e3607b636ad4a3483306aee02684664" name="24ed9616bac44ef390093e1ffc048c1f" class="tab" ><label for="24ed9616bac44ef390093e1ffc048c1f-9e3607b636ad4a3483306aee02684664" >Startup</label>
-<input type="radio" id="24ed9616bac44ef390093e1ffc048c1f-fc595f486fb04f2cbff209c1e1d15699" name="24ed9616bac44ef390093e1ffc048c1f" class="tab" ><label for="24ed9616bac44ef390093e1ffc048c1f-fc595f486fb04f2cbff209c1e1d15699" >Android</label>
-<input type="radio" id="24ed9616bac44ef390093e1ffc048c1f-9e00b369847c4e378e53a9f956011b08" name="24ed9616bac44ef390093e1ffc048c1f" class="tab" ><label for="24ed9616bac44ef390093e1ffc048c1f-9e00b369847c4e378e53a9f956011b08" >iOS</label>
-<input type="radio" id="24ed9616bac44ef390093e1ffc048c1f-0a1fcf53b59849999b11b56addc0dbed" name="24ed9616bac44ef390093e1ffc048c1f" class="tab" ><label for="24ed9616bac44ef390093e1ffc048c1f-0a1fcf53b59849999b11b56addc0dbed" >Windows</label>
+<input type="radio" id="9e8b50fec8224f0da59eda66493becbd-04470b4725374738b49b082ad1b796e1" name="9e8b50fec8224f0da59eda66493becbd" class="tab" checked><label for="9e8b50fec8224f0da59eda66493becbd-04470b4725374738b49b082ad1b796e1" >General</label>
+<input type="radio" id="9e8b50fec8224f0da59eda66493becbd-b2ba6425a519486b870eb495d0c7e059" name="9e8b50fec8224f0da59eda66493becbd" class="tab" ><label for="9e8b50fec8224f0da59eda66493becbd-b2ba6425a519486b870eb495d0c7e059" >Startup</label>
+<input type="radio" id="9e8b50fec8224f0da59eda66493becbd-d266873dccca4473bd49840d1bd6395a" name="9e8b50fec8224f0da59eda66493becbd" class="tab" ><label for="9e8b50fec8224f0da59eda66493becbd-d266873dccca4473bd49840d1bd6395a" >Android</label>
+<input type="radio" id="9e8b50fec8224f0da59eda66493becbd-0c8eb2a4487b4d9f9e6f37288c12d126" name="9e8b50fec8224f0da59eda66493becbd" class="tab" ><label for="9e8b50fec8224f0da59eda66493becbd-0c8eb2a4487b4d9f9e6f37288c12d126" >iOS</label>
+<input type="radio" id="9e8b50fec8224f0da59eda66493becbd-78ae28d4b4134672a9468ef0c1b97529" name="9e8b50fec8224f0da59eda66493becbd" class="tab" ><label for="9e8b50fec8224f0da59eda66493becbd-78ae28d4b4134672a9468ef0c1b97529" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
