--- a/release-notes/v241.html
+++ b/release-notes/v241.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - GeoDispatch</title>
+    <title>Shiny.NET - v2.4.1</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">GeoDispatch</div>
+                                <div class="text-white m-0 title">v2.4.1</div>
                             </div>
                         </div>
                     </div>
@@ -318,14 +318,14 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/appservices">App Services</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/appservices/calldirectory">Call Directory</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/appservices/datasync">Data Sync</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child active">
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -343,7 +343,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/release-notes">Release Notes</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
@@ -362,7 +362,7 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child">
+                                                        <div class="sidebar-nav-child active">
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -371,39 +371,18 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <p>Push + GPS - By sending a push notification with incident data in the payload, your users will now receive a notification if they are within the sent &quot;geofence&quot; to ask them if they are able to manage a situation.</p>
-<pre><code class="language-csharp">namespace Shiny.GeoDispatch
-{
-    public interface IGeoDispatchManager
-    {
-        bool IsEnabled { get; set; }
-        Task&lt;PushAccessState&gt; RequestAccess();
-
-        Task RespondToDispatch(string identifier, bool accept, string? textReply);
-        Task&lt;IEnumerable&lt;GeoDispatchMessage&gt;&gt; GetPendingDispatches();
-    }
-}
-</code></pre>
-<h3 id="configuration">Configuration</h3>
-<pre><code class="language-csharp">    public ChannelImportance NotificationChannelImportance { get; set; } = ChannelImportance.Normal;
-    public string NotificationAcceptText { get; set; } = &quot;Accept&quot;;
-    public string NotificationRejectText { get; set; } = &quot;Reject&quot;;
-    public bool AllowAcceptTextReplies { get; set; }
-    public bool AllowRejectTextReplies { get; set; }
-
-    /// &lt;summary&gt;
-    /// If true, unit is processed as meters else processed as miles
-    /// &lt;/summary&gt;
-    public bool PayloadRadiusInMetricUnit { get; set; } = true;
-    public string PayloadIdKey { get; set; } = &quot;id&quot;;
-    public string PayloadLatitudeKey { get; set; } = &quot;lat&quot;;
-    public string PayloadLongitudeKey { get; set; } = &quot;lng&quot;;
-    public string PayloadRadiusKey { get; set; } = &quot;rad&quot;;
-</code></pre>
+                                    <h2 id="all">ALL</h2>
+<ul>
+<li>Fix UWP target for all modules</li>
+</ul>
+<h2 id="http-transfers">HTTP Transfers</h2>
+<ul>
+<li>[Fix][iOS] Additional header for file uploads (Big thanks to Guido Neele for all his help on this)</li>
+</ul>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/appservices/geodispatch.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/v241.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
