--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -363,17 +363,20 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="c47437d1687c4489839a3d6455bc1000-dd15eba6bc124ffa9b593dab7d0b5498" name="c47437d1687c4489839a3d6455bc1000" class="tab" checked><label for="c47437d1687c4489839a3d6455bc1000-dd15eba6bc124ffa9b593dab7d0b5498" >General</label>
-<input type="radio" id="c47437d1687c4489839a3d6455bc1000-74876e2f0cd541aa919467320fd05558" name="c47437d1687c4489839a3d6455bc1000" class="tab" ><label for="c47437d1687c4489839a3d6455bc1000-74876e2f0cd541aa919467320fd05558" >Startup</label>
-<input type="radio" id="c47437d1687c4489839a3d6455bc1000-3d5f8b47dd314827bebec58f9cb01f39" name="c47437d1687c4489839a3d6455bc1000" class="tab" ><label for="c47437d1687c4489839a3d6455bc1000-3d5f8b47dd314827bebec58f9cb01f39" >Android</label>
-<input type="radio" id="c47437d1687c4489839a3d6455bc1000-4d338da98ca2431094554b1d20e0039f" name="c47437d1687c4489839a3d6455bc1000" class="tab" ><label for="c47437d1687c4489839a3d6455bc1000-4d338da98ca2431094554b1d20e0039f" >iOS</label>
-<input type="radio" id="c47437d1687c4489839a3d6455bc1000-d57b4618129c4ebcb7921c8ccebad01a" name="c47437d1687c4489839a3d6455bc1000" class="tab" ><label for="c47437d1687c4489839a3d6455bc1000-d57b4618129c4ebcb7921c8ccebad01a" >Windows</label>
+<input type="radio" id="412ce7a80aef4434aae52144e42f7665-1f6a4a326b494336b6f85701beb439fe" name="412ce7a80aef4434aae52144e42f7665" class="tab" checked><label for="412ce7a80aef4434aae52144e42f7665-1f6a4a326b494336b6f85701beb439fe" >General</label>
+<input type="radio" id="412ce7a80aef4434aae52144e42f7665-548e473fc36146349a7860eec89cbaa5" name="412ce7a80aef4434aae52144e42f7665" class="tab" ><label for="412ce7a80aef4434aae52144e42f7665-548e473fc36146349a7860eec89cbaa5" >Startup</label>
+<input type="radio" id="412ce7a80aef4434aae52144e42f7665-b761affb698f4a939135610942dba5ab" name="412ce7a80aef4434aae52144e42f7665" class="tab" ><label for="412ce7a80aef4434aae52144e42f7665-b761affb698f4a939135610942dba5ab" >Android</label>
+<input type="radio" id="412ce7a80aef4434aae52144e42f7665-c68a89088a4b4d8fa96aabd39993da6e" name="412ce7a80aef4434aae52144e42f7665" class="tab" ><label for="412ce7a80aef4434aae52144e42f7665-c68a89088a4b4d8fa96aabd39993da6e" >iOS</label>
+<input type="radio" id="412ce7a80aef4434aae52144e42f7665-9896014b99794b36afb4fbfc0b391c38" name="412ce7a80aef4434aae52144e42f7665" class="tab" ><label for="412ce7a80aef4434aae52144e42f7665-9896014b99794b36afb4fbfc0b391c38" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
