--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -363,17 +363,20 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v241">v2.4.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="79fab368eddf4f22a8c99f7bd26c8689-30cdbfd062774e44a35dc418340aeebe" name="79fab368eddf4f22a8c99f7bd26c8689" class="tab" checked><label for="79fab368eddf4f22a8c99f7bd26c8689-30cdbfd062774e44a35dc418340aeebe" >General</label>
-<input type="radio" id="79fab368eddf4f22a8c99f7bd26c8689-29fc4d22a95641e7948beebe25fde339" name="79fab368eddf4f22a8c99f7bd26c8689" class="tab" ><label for="79fab368eddf4f22a8c99f7bd26c8689-29fc4d22a95641e7948beebe25fde339" >Startup</label>
-<input type="radio" id="79fab368eddf4f22a8c99f7bd26c8689-ef91068b25ef49f6ad0e94301eccb29e" name="79fab368eddf4f22a8c99f7bd26c8689" class="tab" ><label for="79fab368eddf4f22a8c99f7bd26c8689-ef91068b25ef49f6ad0e94301eccb29e" >Android</label>
-<input type="radio" id="79fab368eddf4f22a8c99f7bd26c8689-d139b878cbc64c2e9ed275a98625dd53" name="79fab368eddf4f22a8c99f7bd26c8689" class="tab" ><label for="79fab368eddf4f22a8c99f7bd26c8689-d139b878cbc64c2e9ed275a98625dd53" >iOS</label>
-<input type="radio" id="79fab368eddf4f22a8c99f7bd26c8689-c7890b4efca2481e84b2637a177556a7" name="79fab368eddf4f22a8c99f7bd26c8689" class="tab" ><label for="79fab368eddf4f22a8c99f7bd26c8689-c7890b4efca2481e84b2637a177556a7" >Windows</label>
+<input type="radio" id="2caf4bd7609d414ab7cb595fe4c3e850-e0692953b44c4640a76819d54710ae73" name="2caf4bd7609d414ab7cb595fe4c3e850" class="tab" checked><label for="2caf4bd7609d414ab7cb595fe4c3e850-e0692953b44c4640a76819d54710ae73" >General</label>
+<input type="radio" id="2caf4bd7609d414ab7cb595fe4c3e850-7910a47f3ce24eca8c202c30fb38aa9c" name="2caf4bd7609d414ab7cb595fe4c3e850" class="tab" ><label for="2caf4bd7609d414ab7cb595fe4c3e850-7910a47f3ce24eca8c202c30fb38aa9c" >Startup</label>
+<input type="radio" id="2caf4bd7609d414ab7cb595fe4c3e850-641cdc1bf37d47028da5f10278bd6601" name="2caf4bd7609d414ab7cb595fe4c3e850" class="tab" ><label for="2caf4bd7609d414ab7cb595fe4c3e850-641cdc1bf37d47028da5f10278bd6601" >Android</label>
+<input type="radio" id="2caf4bd7609d414ab7cb595fe4c3e850-5846ed09b9f0443f8d592b9158c5846d" name="2caf4bd7609d414ab7cb595fe4c3e850" class="tab" ><label for="2caf4bd7609d414ab7cb595fe4c3e850-5846ed09b9f0443f8d592b9158c5846d" >iOS</label>
+<input type="radio" id="2caf4bd7609d414ab7cb595fe4c3e850-597d56ccabc74aa7a14d65d9cff01f3a" name="2caf4bd7609d414ab7cb595fe4c3e850" class="tab" ><label for="2caf4bd7609d414ab7cb595fe4c3e850-597d56ccabc74aa7a14d65d9cff01f3a" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
